# bumbler

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  bumbler.sln  diff.txt
bumbler/: CMakeLists.txt  ReadMe.txt  bumbler.cpp  bumbler.vcxproj  bumbler.vcxproj.filters  out_actor.h  out_router.h  remote_server_actor.h
bumbler/launcher/: frame_servers.cpp  frame_servers.h  my_app.h  server_connection_actor.h  server_info.cpp  server_info.h  server_list.h
bumbler/src/: bumbler_client_actor.h  frame_servers.cpp  gui_main.h  launcher.h  my_app.cpp  my_app.h  server_connection_actor.h  server_info.cpp  server_info.h  server_list.h  server_status.h
docs/: README.md  actor.md  actor_ref.md  actor_system.md  props.md
example/app/: CMakeLists.txt  bumbler.cpp  out_actor.h  out_router.h  remote_server_actor.h
example/app/launcher/: my_app.cpp  my_app.h  server_connection_actor.h  server_info.h
example/server/: CMakeLists.txt  out_router.h  server.cpp  server_actor.h
example/shared/: CMakeLists.txt
example/shared/communication/: serializable_types.h  server_status.cpp  server_status.h
libs/atan/: atan.vcxproj  interruptible_thread.h  message.h
libs/atan/actor/: actor.cpp  actor.h  actor_ref.h  local_actor.h  remote_actor.cpp  remote_actor.h
libs/atan/actor_system/: actor_system.h  actor_system_errors.h  udp_server.h
libs/atan/packet/: packet.h  packet_structs.h
server/: CMakeLists.txt  out_router.h  server.cpp  server.vcxproj  server.vcxproj.filters  server_actor.h
server/src/: server_actor.h
shared/: CMakeLists.txt  shared.vcxproj  utility.cpp  utility.h
shared/atan/: CMakeLists.txt  README.md  atan.vcxproj.filters  interruptible_thread.h  message.h  typed_message.cpp  typed_message.h
shared/atan/actor/: README.md  actor.cpp  actor.h  actor_ref.cpp  actor_ref.h  local_actor.cpp  local_actor.h  promise_actor.cpp  promise_actor.h  remote_actor.cpp  remote_actor.h  untyped_actor.h
shared/atan/actor/actor_ref/: README.md  actor_ref.cpp  actor_ref.h
shared/atan/actor/mailbox/: fifo_mailbox.h  lifo_mailbox.h  mailbox.h  priority_mailbox.h  standard_mailbox.h
shared/atan/actor/props/: README.md  props.h  typed_props.h
shared/atan/actor/router/: random_router.cpp  random_router.h  round_robin_router.cpp  round_robin_router.h  router.cpp  router.h  smallest_mailbox_router.cpp  smallest_mailbox_router.h
shared/atan/actor/router/mailbox/: mailbox.h  priority_mailbox.cpp  priority_mailbox.h
shared/atan/actor/routing/: random_pool.h  random_router.h  round_robin_pool.cpp  round_robin_pool.h  round_robin_router.h  router.cpp  router.h  router_pool.cpp  router_pool.h  smallest_mailbox_pool.cpp  smallest_mailbox_router.cpp  smallest_mailbox_router.h
shared/atan/actor_system/: README.md  actor_system.cpp  actor_system.h  actor_system_errors.h  actor_system_storage.cpp  actor_system_storage.h  typed_promise_actor.h  udp_server.h
shared/atan/dispatcher/: dispatcher.h
shared/atan/messages/: broadcast.h  kill_actor.h  message.h  serialization_utility.h  stop_actor.h  typed_message.h
shared/atan/messages/commands/: broadcast.h  command.h  commands.h  kill_actor.h  priority_message.h  stop_actor.h
shared/atan/packet/: packet.h  packet_exceptions.h  packet_structs.cpp  packet_structs.h
shared/atan/scheduler/: README.md  cancellable.h  scheduler.h
shared/atan/thread_pool/: thread_pool.cpp  thread_pool.h
shared/communication/: message_settings.h  serializable_types.h  server_status.h
shared/logger/: logger.h
shared/network/: server_status.h
src/bumbler/: CMakeLists.txt  interruptible_thread.h  utility.cpp  utility.h
src/bumbler/actor/: abstract_actor.cpp  abstract_actor.h  actor.cpp  actor.h  local_actor.cpp  local_actor.h  promise_actor.cpp  promise_actor.h  remote_actor.cpp  remote_actor.h  typed_promise_actor.h  untyped_actor.h
src/bumbler/actor/actor_ref/: actor_ref.cpp  actor_ref.h
src/bumbler/actor/channels/: abstract_channel.h  actor_channel.cpp  actor_channel.h  invalid_channel.h  local_actor_channel.cpp  local_actor_channel.h  remote_actor_channel.cpp  remote_actor_channel.h
src/bumbler/actor/mailbox/: fifo_mailbox.cpp  fifo_mailbox.h  lifo_mailbox.cpp  lifo_mailbox.h  mailbox.h  priority_mailbox.cpp  priority_mailbox.h  standard_mailbox.h
src/bumbler/actor/messaging/: messaging_service.cpp  messaging_service.h
src/bumbler/actor/props/: props.h  typed_props.h
src/bumbler/actor/routing/: random_pool.cpp  random_pool.h  round_robin_pool.cpp  round_robin_pool.h  router.cpp  router.h  router_logic.h  router_pool.cpp  router_pool.h  smallest_mailbox_pool.cpp  smallest_mailbox_pool.h
src/bumbler/actor_system/: actor_system.cpp  actor_system.h  actor_system_errors.h  actor_system_storage.cpp  actor_system_storage.h  typed_promise_actor.h  udp_server.h
src/bumbler/dispatcher/: dispatcher.cpp  dispatcher.h
src/bumbler/internal/: bumbler.h  identifier.h  messaging_service.cpp  messaging_service.h
src/bumbler/logger/: logger.cpp  logger.h
src/bumbler/messages/: message.h  typed_message.cpp  typed_message.h  typed_variant.h  variant.h
src/bumbler/messages/commands/: broadcast.h  command.h  kill_actor.h  priority_message.h  stop_actor.h
src/bumbler/packet/: packet.h  packet_exceptions.h  packet_structs.cpp  packet_structs.h
src/bumbler/scheduler/: cancellable.h  scheduler.cpp  scheduler.h
src/bumbler/thread_pool/: ctpl_stl.h  thread_pool.cpp  thread_pool.h
test/: CMakeLists.txt  actor_ref_test.cpp  actor_test.cpp  benchmark_actor.h  future_test.cpp  mailbox_test.cpp  message_benchmark.cpp  message_test.cpp  props_test.cpp  remote_test_actor.h  router_test.cpp  scheduler_test.cpp  spawn_actor_benchmark.cpp  test_actor.h  test_router.h  thread_pool_test.cpp  typed_data.h
